Pull up following revision(s) (requested by mlelstv in ticket #797): 	bin/df/df.c: revision 1.86 block numbers are measured in f_frsize units. Make -P option use this instead of f_bsize. Also account for reserved blocks like normal non-P output. Fixes PR bin/41541.